--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap');
 @import "tailwindcss";
 @import "tw-animate-css";
+
+@theme {
+  --font-inconsolata: 'Inconsolata', sans-serif;
+}
 
 @custom-variant dark (&:is(.dark *));
 
